# audio-lab

./: .gitignore  README.md
episodes/ToldStraight-Ep01/: alt-text.md  captions-autosync.txt  show-notes.html  show-notes.md  transcript.html  transcript.md  transcript.txt  transcript.vtt
fish/: audition-judge.fish  audition.fish
pipeline/: main.py  pyproject.toml
pipeline/audition/: audition.py  helpers.py  run.py
spotify/: .gitignore  pyproject.toml
