[project]
name = "audio-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "edge-tts>=7.2.8",
    "questionary>=2.1.1",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "spotipy>=2.26.0",
]

[project.scripts]
audition = "audition.run:main"

[tool.uv]
package = true
